--- a/polkadot/runtime/parachains/Cargo.toml
+++ b/polkadot/runtime/parachains/Cargo.toml
@@ -15,7 +15,15 @@ scale-info = { version = "2.5.0", default-features = false, features = ["derive"
 serde = { version = "1.0.188", default-features = false, features = ["derive", "alloc"] }
 derive_more = "0.99.17"
 bitflags = "1.3.2"
+rand = { version = "0.8.5", default-features = false }
+rand_chacha = { version = "0.3.1", default-features = false }
+static_assertions = { version = "1.1.0", optional = true }
 
+# infra-related
+pallet-validator-election = { path = "../../../substrate/frame/validator-election", default-features = false }
+pallet-system-token = { path = "../../../substrate/frame/system-token", default-features = false }
+
+# primitives
 sp-api = { path = "../../../substrate/primitives/api", default-features = false }
 inherents = { package = "sp-inherents", path = "../../../substrate/primitives/inherents", default-features = false }
 sp-std = { package = "sp-std", path = "../../../substrate/primitives/std", default-features = false }
@@ -28,6 +36,8 @@ sp-keystore = { path = "../../../substrate/primitives/keystore", optional = true
 sp-application-crypto = { path = "../../../substrate/primitives/application-crypto", default-features = false, optional = true }
 sp-tracing = { path = "../../../substrate/primitives/tracing", default-features = false, optional = true }
 
+# frames
+pallet-assets = { path = "../../../substrate/frame/assets", default-features = false }
 pallet-authority-discovery = { path = "../../../substrate/frame/authority-discovery", default-features = false }
 pallet-authorship = { path = "../../../substrate/frame/authorship", default-features = false }
 pallet-balances = { path = "../../../substrate/frame/balances", default-features = false }
@@ -41,13 +51,13 @@ frame-benchmarking = { path = "../../../substrate/frame/benchmarking", default-f
 frame-support = { path = "../../../substrate/frame/support", default-features = false }
 frame-system = { path = "../../../substrate/frame/system", default-features = false }
 
+# xcm
 xcm = { package = "staging-xcm", path = "../../xcm", default-features = false }
 xcm-executor = { package = "staging-xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
 primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
+pallet-xcm = { path = "../../xcm/pallet-xcm", default-features = false }
+pallet-asset-link = { path = "../../xcm/asset-link", default-features = false }
 
-rand = { version = "0.8.5", default-features = false }
-rand_chacha = { version = "0.3.1", default-features = false }
-static_assertions = { version = "1.1.0", optional = true }
 polkadot-parachain-primitives = { path = "../../parachain", default-features = false }
 polkadot-runtime-metrics = { path = "../metrics", default-features = false}
 polkadot-core-primitives = { path = "../../core-primitives", default-features = false }
@@ -74,6 +84,11 @@ std = [
 	"frame-system/std",
 	"inherents/std",
 	"log/std",
+	"pallet-assets/std",
+	"pallet-asset-link/std",
+	"pallet-xcm/std",
+	"pallet-validator-election/std",
+	"pallet-system-token/std",
 	"pallet-authority-discovery/std",
 	"pallet-authorship/std",
 	"pallet-babe/std",
