--- a/infrablockspace/runtime/infra-relay/Cargo.toml
+++ b/infrablockspace/runtime/infra-relay/Cargo.toml
@@ -29,6 +29,7 @@ beefy-primitives = { package = "sp-consensus-beefy", path = "../../../substrate/
 block-builder-api = { package = "sp-block-builder", path = "../../../substrate/primitives/block-builder", default-features = false }
 inherents = { package = "sp-inherents", path = "../../../substrate/primitives/inherents", default-features = false }
 offchain-primitives = { package = "sp-offchain", path = "../../../substrate/primitives/offchain", default-features = false }
+sp-arithmetic = { path = "../../../substrate/primitives/arithmetic", default-features = false }
 tx-pool-api = { package = "sp-transaction-pool", path = "../../../substrate/primitives/transaction-pool", default-features = false }
 sp-api = { path = "../../../substrate/primitives/api", default-features = false }
 sp-std = { path = "../../../substrate/primitives/std", default-features = false }
@@ -54,6 +55,7 @@ pallet-system-token-tx-payment = { path = "../../../substrate/frame/transaction-
 pallet-collective = { path = "../../../substrate/frame/collective", default-features = false }
 pallet-democracy = { path = "../../../substrate/frame/democracy", default-features = false }
 pallet-elections-phragmen = { path = "../../../substrate/frame/elections-phragmen", default-features = false }
+pallet-asset-rate = {  path = "../../../substrate/frame/asset-rate", default-features = false }
 pallet-grandpa = { path = "../../../substrate/frame/grandpa", default-features = false }
 pallet-identity = { path = "../../../substrate/frame/identity", default-features = false }
 pallet-im-online = { path = "../../../substrate/frame/im-online", default-features = false }
@@ -132,6 +134,7 @@ std = [
 	"tx-pool-api/std",
 	"block-builder-api/std",
 	"offchain-primitives/std",
+	"sp-arithmetic/std",
 	"sp-std/std",
 	"sp-mmr-primitives/std",
 	"frame-support/std",
@@ -147,6 +150,7 @@ std = [
 	"pallet-system-token-tx-payment/std",
 	"pallet-collective/std",
 	"pallet-elections-phragmen/std",
+	"pallet-asset-rate/std",
 	"pallet-democracy/std",
 	"pallet-grandpa/std",
 	"pallet-identity/std",
