--- a/cumulus/test/service/Cargo.toml
+++ b/cumulus/test/service/Cargo.toml
@@ -56,7 +56,7 @@ sc-executor-common = { path = "../../../substrate/client/executor/common" }
 
 # Polkadot
 primitives = { path = "../../../infrablockspace/primitives" }
-polkadot-service = { path = "../../../infrablockspace/node/service" }
+infrablockspace-service = { path = "../../../infrablockspace/node/service" }
 polkadot-test-service = { path = "../../../infrablockspace/node/test/service" }
 polkadot-cli = { path = "../../../infrablockspace/cli" }
 node-subsystem = { path = "../../../infrablockspace/node/subsystem" }
@@ -104,7 +104,7 @@ runtime-benchmarks = [
 	"parachains-common/runtime-benchmarks",
 	"polkadot-cli/runtime-benchmarks",
 	"primitives/runtime-benchmarks",
-	"polkadot-service/runtime-benchmarks",
+	"infrablockspace-service/runtime-benchmarks",
 	"polkadot-test-service/runtime-benchmarks",
 	"rococo-parachain-runtime/runtime-benchmarks",
 	"sc-service/runtime-benchmarks",
