--- a/infrablockspace/parachain/test-parachains/adder/collator/Cargo.toml
+++ b/infrablockspace/parachain/test-parachains/adder/collator/Cargo.toml
@@ -21,7 +21,7 @@ log = "0.4.17"
 test-parachain-adder = { path = ".." }
 primitives = { path = "../../../../primitives" }
 polkadot-cli = { path = "../../../../cli" }
-polkadot-service = { path = "../../../../node/service", features = ["rococo-native"] }
+infrablockspace-service = { path = "../../../../node/service", features = ["rococo-native"] }
 node-primitives = { path = "../../../../node/primitives" }
 node-subsystem = { path = "../../../../node/subsystem" }
 
