--- a/cumulus/infra-parachain/Cargo.toml
+++ b/cumulus/infra-parachain/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "polkadot-parachain-bin"
+name = "infra-parachain-bin"
 version = "1.1.0"
 authors.workspace = true
 build = "build.rs"
@@ -7,7 +7,7 @@ edition.workspace = true
 description = "Runs a polkadot parachain node which could be a collator."
 
 [[bin]]
-name = "polkadot-parachain"
+name = "infra-parachain"
 path = "src/main.rs"
 
 [dependencies]
@@ -23,6 +23,7 @@ serde_json = "1.0.107"
 # Local
 jsonrpsee = { version = "0.16.2", features = ["server"] }
 parachains-common = { path = "../parachains/common" }
+asset-hub-runtime = { path = "../parachains/runtimes/assets/asset-hub-infra" }
 
 # Substrate
 frame-benchmarking = { path = "../../substrate/frame/benchmarking" }
