--- a/cumulus/zombienet/ibs-local-network.toml
+++ b/cumulus/zombienet/ibs-local-network.toml
@@ -33,24 +33,47 @@ rpc_port = 7400
 ws_port = 7401
 
 [[parachains]]
-id = 2000
-chain = "local"
+id = 1000
+chain = "asset-hub-infra-local"
 cumulus_based = true
 
 # run alice as parachain collator
 [[parachains.collators]]
-name = "alice"
+name = "asset-hub-alice"
 validator = true
 args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "../target/release/parachain-template-node"
-rpc_port = 10400
-ws_port = 10401
+command = "../target/release/infra-parachain"
+rpc_port = 9500
+ws_port = 9501
 
 # run alice as parachain collator
 [[parachains.collators]]
-name = "bob"
+name = "asset-hub-bob"
+validator = true
+args = ["-lparachain=debug", "-l=xcm=trace"]
+command = "../target/release/infra-parachain"
+rpc_port = 9600
+ws_port = 9601
+
+[[parachains]]
+id = 2000
+chain = "parachain-template-local"
+cumulus_based = true
+
+# run alice as parachain collator
+[[parachains.collators]]
+name = "template-alice"
 validator = true
 args = ["-lparachain=debug", "-l=xcm=trace"]
 command = "../target/release/parachain-template-node"
-rpc_port = 10500
-ws_port = 10501
+rpc_port = 9700
+ws_port = 9701
+
+# run alice as parachain collator
+[[parachains.collators]]
+name = "template-bob"
+validator = true
+args = ["-lparachain=debug", "-l=xcm=trace"]
+command = "../target/release/parachain-template-node"
+rpc_port = 9800
+ws_port = 9801
