change node service: aura-node to generic-node

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -437,7 +437,7 @@ members = [
 	"substrate/utils/prometheus",
 	"substrate/utils/wasm-builder",
 ]
-default-members = [ "infrablockspace", "substrate/bin/node-template/node", "cumulus/parachain-template/node", "cumulus/infra-parachain"]
+default-members = [ "infrablockspace", "cumulus/parachain-template/node", "cumulus/infra-parachain"]
 
 [profile.release]
 # Polkadot runtime requires unwinding.
