--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ members = [
 	"cumulus/parachains/runtimes/assets/asset-hub-infra",
 	"cumulus/parachains/runtimes/assets/common",
 	"cumulus/parachains/runtimes/assets/test-utils",
+	"cumulus/parachains/runtimes/ur-auth",
 	"cumulus/infra-parachain",
 	"cumulus/primitives/aura",
 	"cumulus/primitives/core",
