--- a/cumulus/zombienet/ibs-local-network.toml
+++ b/cumulus/zombienet/ibs-local-network.toml
@@ -56,24 +56,24 @@ rpc_port = 9600
 ws_port = 9601
 
 [[parachains]]
-id = 2000
-chain = "parachain-template-local"
+id = 2001
+chain = "urauth-local"
 cumulus_based = true
 
 # run alice as parachain collator
 [[parachains.collators]]
-name = "template-alice"
+name = "urauth-alice"
 validator = true
 args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "../target/release/parachain-template-node"
+command = "../target/release/infra-parachain"
 rpc_port = 9700
 ws_port = 9701
 
 # run alice as parachain collator
 [[parachains.collators]]
-name = "template-bob"
+name = "urauth-bob"
 validator = true
 args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "../target/release/parachain-template-node"
+command = "../target/release/infra-parachain"
 rpc_port = 9800
 ws_port = 9801
