--- a/substrate/primitives/runtime/Cargo.toml
+++ b/substrate/primitives/runtime/Cargo.toml
@@ -14,6 +14,7 @@ readme = "README.md"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
+parity-util-mem = { version = "0.12.0", default-features = false, features = ["primitive-types"] }
 codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
 bounded-collections = { version = "0.1.8", default-features = false }
 either = { version = "1.5", default-features = false }
@@ -61,6 +62,7 @@ std = [
 	"sp-std/std",
 	"sp-tracing/std",
 	"sp-weights/std",
+	"parity-util-mem/std",
 ]
 
 # Serde support without relying on std features.
