--- a/cumulus/zombienet/ibs-local-network.toml
+++ b/cumulus/zombienet/ibs-local-network.toml
@@ -32,6 +32,13 @@ args = ["-lparachain=debug", "-l=xcm=trace"]
 rpc_port = 7400
 ws_port = 7401
 
+[[relaychain.nodes]]
+name = "ferdie"
+validator = true
+args = ["-lparachain=debug", "-l=xcm=trace"]
+rpc_port = 7500
+ws_port = 7501
+
 [[parachains]]
 id = 1000
 chain = "asset-hub-infra-local"
@@ -56,7 +63,30 @@ rpc_port = 9600
 ws_port = 9601
 
 [[parachains]]
-id = 2001
+id = 1001
+chain = "contracts-infra-local"
+cumulus_based = true
+
+# run alice as parachain collator
+[[parachains.collators]]
+name = "contracts-infra-alice"
+validator = true
+args = ["-lparachain=debug", "-l=xcm=trace"]
+command = "../target/release/infra-parachain"
+rpc_port = 9700
+ws_port = 9701
+
+# run alice as parachain collator
+[[parachains.collators]]
+name = "contracts-infra-bob"
+validator = true
+args = ["-lparachain=debug", "-l=xcm=trace"]
+command = "../target/release/infra-parachain"
+rpc_port = 9800
+ws_port = 9801
+
+[[parachains]]
+id = 2000
 chain = "urauth-local"
 cumulus_based = true
 
@@ -66,8 +96,8 @@ name = "urauth-alice"
 validator = true
 args = ["-lparachain=debug", "-l=xcm=trace"]
 command = "../target/release/infra-parachain"
-rpc_port = 9700
-ws_port = 9701
+rpc_port = 9900
+ws_port = 9901
 
 # run alice as parachain collator
 [[parachains.collators]]
@@ -75,5 +105,5 @@ name = "urauth-bob"
 validator = true
 args = ["-lparachain=debug", "-l=xcm=trace"]
 command = "../target/release/infra-parachain"
-rpc_port = 9800
-ws_port = 9801
+rpc_port = 10000
+ws_port = 10001
