feat: rebase from master

--- a/substrate/frame/did-core/Cargo.toml
+++ b/substrate/frame/did-core/Cargo.toml
@@ -9,15 +9,18 @@ license = "Apache-2.0"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-sp-core = { path = "../../primitives/core", default-features = false}
-sp-std = { path = "../../primitives/std", default-features = false}
-sp-runtime = { path = "../../primitives/runtime", default-features = false}
-sp-io = { path = "../../primitives/io", default-features = false}
-frame-system = { path = "../system", default-features = false}
-frame-support = { path = "../support", default-features = false}
-sp-api = { path = "../../primitives/api", default-features = false}
-sp-application-crypto = { path = "../../primitives/application-crypto", default-features = false, features = ["serde"] }
-frame-benchmarking = { path = "../benchmarking", default-features = false, optional = true}
+sp-core = { path = "../../primitives/core", default-features = false, features = ["full_crypto"] }
+sp-std = { path = "../../primitives/std", default-features = false, features = ["std"] }
+sp-runtime = { path = "../../primitives/runtime", default-features = false }
+sp-io = { path = "../../primitives/io", default-features = false }
+frame-system = { path = "../system", default-features = false }
+frame-support = { path = "../support", default-features = false }
+sp-api = { path = "../../primitives/api", default-features = false, features = ["std"] }
+sp-application-crypto = { path = "../../primitives/application-crypto", default-features = false, features = [
+    "serde",
+    "full_crypto",
+] }
+frame-benchmarking = { path = "../benchmarking", default-features = false, optional = true }
 num-traits = { version = "0.2.14", default-features = false }
 
 [dependencies.bitflags]
@@ -96,15 +99,14 @@ optional = true
 [dev-dependencies]
 rand = "0.8.3"
 # evm = { git = "https://github.com/rust-blockchain/evm", rev = "51b8c2ce3104265e1fd5bb0fe5cdfd2e0938239c", default-features = false, features = ["with-codec"] }
-pallet-balances = { path = "../balances", default-features = false}
-pallet-timestamp = { path = "../timestamp", default-features = false}
+pallet-balances = { path = "../balances", default-features = false }
+pallet-timestamp = { path = "../timestamp", default-features = false }
 
 # [dev-dependencies.pallet-evm-precompile-storage-reader]
 # default-features = false
 # git = "https://github.com/docknetwork/frontier.git"
 # branch = "master"
 # path = "../../../../frontier/frame/evm/precompile/storage-reader"
-
 
 
 # [dev-dependencies.pallet-evm]
@@ -129,7 +131,6 @@ pallet-timestamp = { path = "../timestamp", default-features = false}
 # default-features = false
 # git = "https://github.com/docknetwork/frontier.git"
 # branch = "master"
-
 
 
 [features]
@@ -163,12 +164,12 @@ std = [
 ]
 
 runtime-benchmarks = [
-	"frame-benchmarking/runtime-benchmarks",
+    "frame-benchmarking/runtime-benchmarks",
     "hex-literal",
     "getrandom",
     "schnorrkel",
     "schnorrkel/chacha",
     "rand_chacha",
     "rand",
-    "merlin"
+    "merlin",
 ]
