--- a/substrate/primitives/consensus/beefy/Cargo.toml
+++ b/substrate/primitives/consensus/beefy/Cargo.toml
@@ -12,25 +12,30 @@ description = "Primitives for BEEFY protocol."
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
+	"derive",
+] }
 scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
-serde = { version = "1.0.188", default-features = false,  optional = true, features =  ["derive", "alloc"] }
-sp-api = { path = "../../api", default-features = false}
-sp-application-crypto = { path = "../../application-crypto", default-features = false}
-sp-core = { path = "../../core", default-features = false}
-sp-io = { path = "../../io", default-features = false}
-sp-mmr-primitives = { path = "../../merkle-mountain-range", default-features = false}
-sp-runtime = { path = "../../runtime", default-features = false}
-sp-std = { path = "../../std", default-features = false}
+serde = { version = "1.0.188", default-features = false, optional = true, features = [
+	"derive",
+	"alloc",
+] }
+sp-api = { path = "../../api", default-features = false }
+sp-application-crypto = { path = "../../application-crypto", default-features = false }
+sp-core = { path = "../../core", default-features = false }
+sp-io = { path = "../../io", default-features = false }
+sp-mmr-primitives = { path = "../../merkle-mountain-range", default-features = false }
+sp-runtime = { path = "../../runtime", default-features = false }
+sp-std = { path = "../../std", default-features = false }
 strum = { version = "0.24.1", features = ["derive"], default-features = false }
 lazy_static = "1.4.0"
 
 [dev-dependencies]
 array-bytes = "6.1"
-w3f-bls = { version = "0.1.3", features = ["std"]} 
+w3f-bls = { version = "0.1.3", features = ["std"] }
 
 [features]
-default = [ "std" ]
+default = ["std"]
 std = [
 	"codec/std",
 	"scale-info/std",
@@ -55,7 +60,4 @@ serde = [
 
 # This feature adds BLS crypto primitives. It should not be used in production since
 # the BLS implementation and interface may still be subject to significant change.
-bls-experimental = [
-	"sp-application-crypto/bls-experimental",
-	"sp-core/bls-experimental",
-]
+bls-experimental = ["sp-application-crypto/bls-experimental", "sp-core/bls-experimental"]
