feat: resolve all conficts due to infra-did migration

--- a/substrate/frame/did-core/Cargo.toml
+++ b/substrate/frame/did-core/Cargo.toml
@@ -106,9 +106,7 @@ std = [
     "frame-benchmarking/std",
     "sp-application-crypto/std",
     "sp-application-crypto/full_crypto",
-    # "serde",
-    "serde/std",
-    # "serde-big-array/std",
+    "serde",
     "serde-big-array",
     "sp-core/std",
     "sp-core/full_crypto",
