--- a/cumulus/zombienet/ibs-local-network.toml
+++ b/cumulus/zombienet/ibs-local-network.toml
@@ -1,5 +1,5 @@
 [relaychain]
-default_command = "../target/release/infrablockspace"
+default_command = "./target/release/infrablockspace"
 default_args = ["-lparachain=debug", "-l=xcm=trace"]
 chain = "infra-relay-local"
 
@@ -48,7 +48,7 @@ cumulus_based = true
 name = "asset-hub-alice"
 validator = true
 args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "../target/release/infra-parachain"
+command = "./target/release/infra-parachain"
 rpc_port = 9500
 ws_port = 9501
 
@@ -57,7 +57,7 @@ ws_port = 9501
 name = "asset-hub-bob"
 validator = true
 args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "../target/release/infra-parachain"
+command = "./target/release/infra-parachain"
 rpc_port = 9600
 ws_port = 9601
 
@@ -85,6 +85,29 @@ rpc_port = 9800
 ws_port = 9801
 
 [[parachains]]
+id = 1002
+chain = "did-infra-local"
+cumulus_based = true
+
+# run alice as parachain collator
+[[parachains.collators]]
+name = "did-infra-alice"
+validator = true
+args = ["-lparachain=debug", "-l=xcm=trace"]
+command = "./target/release/infra-parachain"
+rpc_port = 9900
+ws_port = 9901
+
+# run alice as parachain collator
+[[parachains.collators]]
+name = "did-infra-bob"
+validator = true
+args = ["-lparachain=debug", "-l=xcm=trace"]
+command = "../target/release/infra-parachain"
+rpc_port = 10000
+ws_port = 10001
+
+[[parachains]]
 id = 2000
 chain = "urauth-local"
 cumulus_based = true
@@ -95,8 +118,8 @@ name = "urauth-alice"
 validator = true
 args = ["-lparachain=debug", "-l=xcm=trace"]
 command = "../target/release/infra-parachain"
-rpc_port = 9900
-ws_port = 9901
+rpc_port = 11000
+ws_port = 11001
 
 # run alice as parachain collator
 [[parachains.collators]]
@@ -104,5 +127,5 @@ name = "urauth-bob"
 validator = true
 args = ["-lparachain=debug", "-l=xcm=trace"]
 command = "../target/release/infra-parachain"
-rpc_port = 10000
-ws_port = 10001
+rpc_port = 12000
+ws_port = 12001
