--- a/cumulus/zombienet/ibs-local-network.toml
+++ b/cumulus/zombienet/ibs-local-network.toml
@@ -38,51 +38,51 @@ args = ["-lparachain=debug", "-l=xcm=trace"]
 rpc_port = 7500
 ws_port = 7501
 
-[[parachains]]
-id = 1000
-chain = "asset-hub-infra-local"
-cumulus_based = true
+# [[parachains]]
+# id = 1000
+# chain = "asset-hub-infra-local"
+# cumulus_based = true
 
-# run alice as parachain collator
-[[parachains.collators]]
-name = "asset-hub-alice"
-validator = true
-args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "./target/release/infra-parachain"
-rpc_port = 9500
-ws_port = 9501
+# # run alice as parachain collator
+# [[parachains.collators]]
+# name = "asset-hub-alice"
+# validator = true
+# args = ["-lparachain=debug", "-l=xcm=trace"]
+# command = "./target/release/infra-parachain"
+# rpc_port = 9500
+# ws_port = 9501
 
-# run alice as parachain collator
-[[parachains.collators]]
-name = "asset-hub-bob"
-validator = true
-args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "./target/release/infra-parachain"
-rpc_port = 9600
-ws_port = 9601
+# # run alice as parachain collator
+# [[parachains.collators]]
+# name = "asset-hub-bob"
+# validator = true
+# args = ["-lparachain=debug", "-l=xcm=trace"]
+# command = "./target/release/infra-parachain"
+# rpc_port = 9600
+# ws_port = 9601
 
-[[parachains]]
-id = 1001
-chain = "contracts-infra-local"
-cumulus_based = true
+# [[parachains]]
+# id = 1001
+# chain = "contracts-infra-local"
+# cumulus_based = true
 
-# run alice as parachain collator
-[[parachains.collators]]
-name = "contracts-infra-alice"
-validator = true
-args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "../target/release/infra-parachain"
-rpc_port = 9700
-ws_port = 9701
+# # run alice as parachain collator
+# [[parachains.collators]]
+# name = "contracts-infra-alice"
+# validator = true
+# args = ["-lparachain=debug", "-l=xcm=trace"]
+# command = "./target/release/infra-parachain"
+# rpc_port = 9700
+# ws_port = 9701
 
-# run alice as parachain collator
-[[parachains.collators]]
-name = "contracts-infra-bob"
-validator = true
-args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "../target/release/infra-parachain"
-rpc_port = 9800
-ws_port = 9801
+# # run alice as parachain collator
+# [[parachains.collators]]
+# name = "contracts-infra-bob"
+# validator = true
+# args = ["-lparachain=debug", "-l=xcm=trace"]
+# command = "./target/release/infra-parachain"
+# rpc_port = 9800
+# ws_port = 9801
 
 [[parachains]]
 id = 1002
@@ -103,29 +103,29 @@ ws_port = 9901
 name = "did-infra-bob"
 validator = true
 args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "../target/release/infra-parachain"
+command = "./target/release/infra-parachain"
 rpc_port = 10000
 ws_port = 10001
 
-[[parachains]]
-id = 2000
-chain = "urauth-local"
-cumulus_based = true
+# [[parachains]]
+# id = 2000
+# chain = "urauth-local"
+# cumulus_based = true
 
-# run alice as parachain collator
-[[parachains.collators]]
-name = "urauth-alice"
-validator = true
-args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "../target/release/infra-parachain"
-rpc_port = 11000
-ws_port = 11001
+# # run alice as parachain collator
+# [[parachains.collators]]
+# name = "urauth-alice"
+# validator = true
+# args = ["-lparachain=debug", "-l=xcm=trace"]
+# command = "./target/release/infra-parachain"
+# rpc_port = 11000
+# ws_port = 11001
 
-# run alice as parachain collator
-[[parachains.collators]]
-name = "urauth-bob"
-validator = true
-args = ["-lparachain=debug", "-l=xcm=trace"]
-command = "../target/release/infra-parachain"
-rpc_port = 12000
-ws_port = 12001
+# # run alice as parachain collator
+# [[parachains.collators]]
+# name = "urauth-bob"
+# validator = true
+# args = ["-lparachain=debug", "-l=xcm=trace"]
+# command = "./target/release/infra-parachain"
+# rpc_port = 12000
+# ws_port = 12001
